sorta have navbar set up

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,61 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Start of header css */
+.header {
+  margin-top: 20px;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+.more-header {
+  display: flex;
+  width: 100%;
+  height: 80px;
+}
+
+.header-rest-name {
+  color: inherit;
+  text-decoration: inherit;
+  font: RobotoRegular;
+  font-size: 25px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.header-navbar {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+.header-navbar {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 55px;
+}
+
+.header-bottom {
+  flex: 1;
+}
+
+ .navbar {
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
+  color: inherit;
+  text-decoration: inherit;
+  text-transform: uppercase;
+  outline: none;
+}
+/* end of header css */
