--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -53,7 +53,7 @@ code {
   flex: 1;
 }
 
- .navbar {
+.navbar {
   display: flex;
   flex-direction: row;
 }
@@ -88,9 +88,22 @@ div > div {
   text-align: center;
 }
 
+#light .num-table {
+  background-color: #fff;
+}
+
+#dark .num-table {
+  background-color: green;
+}
+
 .num-table:hover {
   background-color: green;
   color: white;
+}
+
+#dark .num-table:hover {
+  background-color: #fff;
+  color: green;
 }
 /* end of tables css */
 
@@ -122,5 +135,3 @@ div > div {
   flex-basis: 100%;
 }
 /* end table setup */
-
-
