finished styling and html changes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,6 @@
 
 #dark .App {
   background-color: #404040;
-  
 }
 
 body {
@@ -99,7 +98,7 @@ div > div {
 
 #dark {
   background-color: #404040;
-  color: #ffffff
+  color: #ffffff;
 }
 
 #dark .num-table {
